// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessmentAnswerChoices MCAssessmentAnswerChoices renders 1`] = `
<div
  role="radiogroup"
>
  <div
    className="for-screen-reader-only"
    tabIndex="-1"
  >
    <div
      className="result-container"
    >
      <p
        className="result incorrect"
      >
        Results: undefined% - undefined
      </p>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`MCAssessmentAnswerChoices MCAssessmentAnswerChoices renders for score = null 1`] = `
<div
  role="radiogroup"
>
  <div
    className="for-screen-reader-only"
    tabIndex="-1"
  />
  <div />
  <div />
</div>
`;

exports[`MCAssessmentAnswerChoices MCAssessmentAnswerChoices renders for type = "pick-all" 1`] = `
<div
  role={null}
>
  <div
    className="for-screen-reader-only"
    tabIndex="-1"
  >
    <div
      className="result-container"
    >
      <p
        className="result incorrect"
      >
        Results: undefined% - undefined
      </p>
      <span
        className="pick-all-instructions"
      />
    </div>
  </div>
  <div />
  <div />
</div>
`;
